k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wareflow-landing
  namespace: hexcore-apps
spec:
  selector:
    app: wareflow-landing
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
